# autocrud

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  codeql.yml  dependency-review.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  image.yml  scorecard.yml  security.yml
backend/: dev_auth_proxy.py  pyproject.toml  run.py
backend/app/: auth_headers.py  build_info.py  config.py  connection.py  dependencies.py  errors.py  main.py  middleware.py  mssql_types.py  reflection.py  security.py  state.py  telemetry.py
backend/app/routes/: admin.py  crud.py  identity.py  meta.py
backend/tests/: README.md  conftest.py
backend/tests/api/: test_admin.py  test_auth_and_contract.py  test_bulk_create.py  test_bulk_delete.py  test_bulk_update.py  test_concurrency.py  test_crud_routes.py  test_identity_route.py  test_meta_routes.py  test_request_logging.py  test_security_headers.py
backend/tests/integration/: conftest.py  golden_snapshot.json  schema.sql  test_bulk_create_roundtrip.py  test_bulk_delete_roundtrip.py  test_bulk_update_roundtrip.py  test_concurrency_roundtrip.py  test_crud_clr_types.py  test_crud_roundtrip.py  test_reflection_golden.py  test_reflection_matrix.py
backend/tests/unit/: test_connection.py  test_errors.py  test_meta_and_config.py  test_middleware.py  test_mssql_types.py  test_query_safety.py  test_reflection_assembly.py  test_reflection_classification.py  test_reflection_types_and_models.py
database/: README.md  permissions.sql  seed.sql
frontend/: .oxlintrc.json  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  mock-api.contract.test.ts  mock-api.ts
frontend/src/: App.tsx  index.css  main.tsx  test-setup.ts  types.ts
frontend/src/components/: accessibility.test.tsx  animated-number.tsx  animated-trash.tsx  app-shell.tsx  bulk-action-bar.tsx  bulk-edit-form.tsx  command-palette.tsx  confetti.tsx  data-table-cells.tsx  data-table.tsx  delete-dialog.tsx  error-boundary.tsx  field-control.tsx  filter-bar.test.tsx  filter-bar.tsx  foreign-key-cell.tsx  grid-controls.tsx  import-dialog.tsx  pagination-bar.tsx  record-detail.tsx  record-form.tsx  save-button.tsx  settings-menu.tsx  sidebar.tsx  slide-over.tsx  states.test.tsx  states.tsx  table-toolbar.tsx  table-view.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  combobox.tsx  hover-card.tsx  label.tsx  number-field.tsx  select.tsx  sonner.tsx
frontend/src/hooks/: queries.test.tsx  queries.ts  use-csv-export.ts  use-debounced-value.ts  use-row-selection.ts  use-table-prefs.ts  use-undoable-delete.test.ts  use-undoable-delete.ts  use-url-state.ts
frontend/src/lib/: animations.ts  api.test.ts  api.ts  csv-import.test.ts  csv-import.ts  csv.test.ts  csv.ts  errors.test.ts  errors.ts  field-values.test.ts  field-values.ts  format.test.ts  format.ts  telemetry.test.ts  telemetry.ts  validation-toast.test.ts  validation-toast.ts
frontend/src/test/: axe.ts
infra/: README.md
infra/environments/dev/: backend.tfvars.example  main.tf  terraform.tf  terraform.tfvars.example  variables.tf
infra/environments/prod/: .terraform.lock.hcl  backend.tfvars.example  main.tf  terraform.tf  terraform.tfvars.example  variables.tf
infra/modules/autocrud/: acr.tf  app_service.tf  entra.tf  monitoring.tf  naming.tf  outputs.tf  resource_group.tf  sql.tf  tags.tf  variables.tf  versions.tf
