[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autocrud-backend"
version = "0.1.0"
description = "Metadata-driven CRUD API over Azure SQL Database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
    "azure-identity>=1.15",
    "cachetools>=5.3",      # TTLCache.expire() returning evicted items requires 5.3+
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",  # typed env config (config.py)
    "tenacity>=8.0",           # connection-acquisition retry (connection.py)
    # Ships logs/traces/exceptions/requests to Application Insights. Activated
    # only when APPLICATIONINSIGHTS_CONNECTION_STRING is set (see telemetry.py),
    # so it's inert in local/test runs.
    "azure-monitor-opentelemetry>=1.6",
    # FastAPI request-span instrumentation, applied explicitly per-app in
    # telemetry.instrument_fastapi (the distro's class-level auto-instrumentation
    # produced no spans here). Declared explicitly so it's guaranteed present;
    # unpinned to resolve within the distro's compatible version range.
    "opentelemetry-instrumentation-fastapi",
    # SQLAlchemy statement tracing — emits one dependency span per executed query
    # (SQL text, target server/db, duration) so database time shows up in App
    # Insights AppDependencies, nested under the request span. Applied in
    # telemetry.instrument_sqlalchemy by patching create_engine so the per-user OBO
    # engines built on demand in connection.py are traced too. Not pulled in by the
    # distro (it doesn't instrument SQLAlchemy); unpinned to track its version range.
    "opentelemetry-instrumentation-sqlalchemy",
]

[project.optional-dependencies]
# Install with: pip install -e ".[test]"
test = [
    "pytest>=8.0",
    "httpx>=0.27",          # FastAPI TestClient transport
    "pytest-cov>=5.0",
    "testcontainers>=4.0",  # tier-3 only; needs Docker at runtime
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "integration: real SQL Server via Testcontainers; requires Docker. Skipped automatically when Docker is unavailable. Deselect explicitly with -m 'not integration'.",
]

[tool.setuptools.packages.find]
# Auto-discovers app/ and app/routes/ — no manual listing needed.
# run.py and dev_auth_proxy.py are entry points, not importable modules,
# and deliberately live outside app/.
where = ["."]
include = ["app*"]
