[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "autocrud-backend"
version = "0.1.0"
description = "Metadata-driven CRUD API over Azure SQL Database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
    "azure-identity>=1.15",
    "cachetools>=5.3",      # TTLCache.expire() returning evicted items requires 5.3+
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",  # typed env config (config.py)
    "tenacity>=8.0",           # connection-acquisition retry (connection.py)
    # Ships logs/traces/exceptions/requests to Application Insights. Activated
    # only when APPLICATIONINSIGHTS_CONNECTION_STRING is set (see telemetry.py),
    # so it's inert in local/test runs.
    "azure-monitor-opentelemetry>=1.6",
    # FastAPI request-span instrumentation, applied explicitly per-app in
    # telemetry.instrument_fastapi (the distro's class-level auto-instrumentation
    # produced no spans here). Declared explicitly so it's guaranteed present;
    # unpinned to resolve within the distro's compatible version range.
    "opentelemetry-instrumentation-fastapi",
    # SQLAlchemy statement tracing — emits one dependency span per executed query
    # (SQL text, target server/db, duration) so database time shows up in App
    # Insights AppDependencies, nested under the request span. Applied in
    # telemetry.instrument_sqlalchemy by patching create_engine so the per-user OBO
    # engines built on demand in connection.py are traced too. Not pulled in by the
    # distro (it doesn't instrument SQLAlchemy); unpinned to track its version range.
    "opentelemetry-instrumentation-sqlalchemy",
]

[project.optional-dependencies]
# Install with: pip install -e ".[test]"
test = [
    "pytest>=8.0",
    "httpx>=0.27",          # FastAPI TestClient transport
    "pytest-cov>=5.0",
    "testcontainers>=4.0",  # tier-3 only; needs Docker at runtime
    # Type gate. Lives in the test extra so `uv run pyright` resolves against the
    # app's real dependencies (SQLAlchemy/Pydantic types) — the CI job and the
    # pre-commit hook both invoke it that way. See [tool.pyright] below.
    "pyright>=1.1.400",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "integration: real SQL Server via Testcontainers; requires Docker. Skipped automatically when Docker is unavailable. Deselect explicitly with -m 'not integration'.",
]

# Lint config for the ruff pre-commit hook (.pre-commit-config.yaml). CI runs no
# Python linter, so this is the source of truth. Defaults otherwise: the enabled
# rules are pyflakes (F) + pycodestyle E4/E7/E9 — deliberately low-noise.
[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Expand when you want more, e.g. extend-select = ["I", "UP", "B"]
# (import-sorting, pyupgrade, flake8-bugbear).

[tool.ruff.lint.per-file-ignores]
# main.py initialises telemetry (instrument_*) before importing the modules that
# build engines/routes, so those imports are deliberately not at the top of file.
"app/main.py" = ["E402"]

# pyright — the backend type gate (CI job "Backend · type check" and the pyright
# pre-commit/pre-push hook, both run as `uv run pyright` so the app's real
# SQLAlchemy/Pydantic types are on the path). "basic" mode catches Optional/None
# and obvious type errors without the ceremony of "strict".
#
# config.py is excluded: it instantiates the pydantic-settings BaseSettings with no
# arguments (values come from the environment), which pyright can't model — it
# reports every settings field as a missing constructor argument (reportCallIssue),
# a framework false positive on a small, stable module. Revisit if pyright gains
# pydantic-settings awareness.
[tool.pyright]
include = ["app"]
ignore = ["app/config.py"]
typeCheckingMode = "basic"
pythonVersion = "3.13"

# bandit (Python SAST) — used by the pre-commit hook and the Security workflow.
# Scan app/ only; tests use asserts and fixtures bandit would otherwise flag.
# Reviewed findings are annotated inline with `# nosec`.
[tool.bandit]
exclude_dirs = ["tests"]

[tool.setuptools.packages.find]
# Auto-discovers app/ and app/routes/ — no manual listing needed.
# run.py and dev_auth_proxy.py are entry points, not importable modules,
# and deliberately live outside app/.
where = ["."]
include = ["app*"]
